tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.out
warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 37 │       {i, res} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:37:8: Main.push_front/2

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 61 │       {i, res} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:61:8: Main.extend_back/2

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 85 │       {i, res} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:85:8: Main.extend_front/2

     warning: variable "j" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 101 │       {j, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:101:8: Main.extend_front/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 128 │       {i, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:128:8: Main.pop_back/1

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 155 │       {i, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:155:8: Main.pop_front/1

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 196 │       {i, s} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:196:8: Main.to_string/1

     error: imported Kernel.to_string/1 conflicts with local function
     │
 180 │   def to_string(dq) do
     │       ^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:180:7: Main (module)

     error: imported Kernel.length/1 conflicts with local function
     │
 173 │   def length(dq) do
     │       ^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs:173:7: Main (module)

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/queues/double_ended_queue.exs: cannot compile module Main (errors have been logged)